fixed scrollbar going beyond the content page

--- a/public/stylesheets/less/rp-content.less
+++ b/public/stylesheets/less/rp-content.less
@@ -38,9 +38,7 @@ html {
 
     //USE THIS FOR STATIONARY TAB TOOLBAR
     padding-top: 32px;
-    padding-bottom: 50px;
-
-
+    margin-bottom: 50px !important;
 
     // height: 80vh !important;
     // max-height: 100% !important;
